refactoring comment